--- a/reserve-datetime-selector/package.json
+++ b/reserve-datetime-selector/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "@types/chrome": "^0.0.270",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
   },
   "name": "reserve-datetime-selector",
   "version": "1.0.0",
