Make build by vite.

--- a/reserve-datetime-selector/package.json
+++ b/reserve-datetime-selector/package.json
@@ -9,7 +9,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && vite build"
   },
   "keywords": [],
   "author": "",
