--- a/reserve-datetime-selector/package.json
+++ b/reserve-datetime-selector/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/chrome": "^0.0.270",
+    "prettier": "3.3.3",
     "typescript": "^5.5.4",
     "vite": "^5.4.2"
   },
