--- a/reserve-datetime-selector/package.json
+++ b/reserve-datetime-selector/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "format": "prettier . --write"
   },
   "keywords": [],
   "author": "",
