--- a/reserve-datetime-selector/package.json
+++ b/reserve-datetime-selector/package.json
@@ -18,5 +18,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
