--- a/reserve-datetime-selector/tsconfig.json
+++ b/reserve-datetime-selector/tsconfig.json
@@ -19,7 +19,8 @@
     "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "jsx": "react-jsx"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "./tsconfig.json"]
