--- a/reserve-datetime-selector/tsconfig.json
+++ b/reserve-datetime-selector/tsconfig.json
@@ -16,7 +16,7 @@
     "esModuleInterop": true,
     "strict": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "skipLibCheck": true
