--- a/reserve-datetime-selector/entrypoint/manifest.json
+++ b/reserve-datetime-selector/entrypoint/manifest.json
@@ -8,6 +8,11 @@
     "48": "logo.png",
     "128": "logo.png"
   },
+  "background": {
+    "service_worker": "icon_clicked.js"
+  },
+  "action": {},
+  "permissions": ["tabs"],
   "content_scripts": [
     {
       "matches": ["https://sycl.neighborwork.jp/reserve_booth/*"],
